# Soulglass

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  todo.txt  tsconfig.json  vite.config.ts
plugins/word-count/: index.ts
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/editor/: createEditor.ts  languages.ts  theme.ts
src/plugins/: plugin-api.ts  registry.ts
src/settings/: store.ts  theme.ts
themes/: milk-glass-dark.json  paper-glass-light.json
