[package]
name = "minimal-glass-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "minimal_glass_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
soulseek_rs = { git = "https://github.com/michel/soulseek-rs", package = "soulseek-rs-lib" }
tokio = { version = "1", features = ["full"] }
lofty = "0.21"
id3 = "1"
base64 = "0.22"
